node-red-svc-clusterIP.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nodered
spec:
  selector:
    run: nodered
  ports:
  - protocol: TCP
    targetPort: 1880
    port: 1880
