node-red-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nodered
spec:
  type: NodePort
  selector:
    run: nodered
  ports:
  - protocol: TCP
    targetPort: 1880
    port: 1880
    nodePort: 30002
