rest-api-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rest-api
spec:
  selector:
    run: rest-api
  ports:
  - protocol: TCP
    targetPort: 3000
    port: 3000
